fixed products (shadow was clipped)

--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -11,12 +11,16 @@
 .products__item {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   gap: 44px;
   padding: 24px 15px;
+  @include tablet {
+    justify-content: space-evenly;
+  }
 }
 
 .products__item--even {
-  justify-content: flex-end;
+  justify-content: space-evenly;
 }
 
 .products__image {
